--- a/docs/Files/style.css
+++ b/docs/Files/style.css
@@ -104,7 +104,7 @@ div {
     font-style:normal;
 	font-variant:normal;
 	font-weight:normal;
-    text-align:justify; 
+    text-align:left; 
     }
 
 .activ {
