--- a/docs/Files/style.css
+++ b/docs/Files/style.css
@@ -11,7 +11,7 @@ body {
     font-family: Roboto, sans-serif;
     font-size: 24px;	
 	  margin-left: 50px;
-	   width: 1600px;
+/*     width: 1600px; */
 }
 
 
