--- a/docs/Files/style.css
+++ b/docs/Files/style.css
@@ -239,7 +239,7 @@ th:hover::after {
 	font-weight: 900;
 	font-size: 20px;
 	line-height: 30px;
-	background: #a5a2a2
+	background: #a5a2a2;
 
 }
 
